// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with custom props 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field mt-4 c-alarm-tag-field v-input--hide-details v-input--is-disabled v-input--is-loading v-input--dense theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            disabled="disabled"
            name="customName"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-icon--disabled material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
        role="progressbar"
        style="height: 2px;"
      >
        <div
          class="v-progress-linear__background primary"
          style="opacity: 0.3; left: 0%; width: 100%;"
        />
        <div
          class="v-progress-linear__buffer"
        />
        <transition-stub
          name="fade-transition"
        >
          <div
            class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
          >
            <div
              class="v-progress-linear__indeterminate long primary"
            />
            <div
              class="v-progress-linear__indeterminate short primary"
            />
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with default props 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field mt-4 c-alarm-tag-field v-input--hide-details v-input--is-loading v-input--dense theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Tag
        </label>
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            name="tag"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="tag"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
        role="progressbar"
        style="height: 2px;"
      >
        <div
          class="v-progress-linear__background primary"
          style="opacity: 0.3; left: 0%; width: 100%;"
        />
        <div
          class="v-progress-linear__buffer"
        />
        <transition-stub
          name="fade-transition"
        >
          <div
            class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
          >
            <div
              class="v-progress-linear__indeterminate long primary"
            />
            <div
              class="v-progress-linear__indeterminate short primary"
            />
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;
